# compile-ruby

./: README.md  aarch64linuxprofile  conanfile.py  m1profile  pyproject.toml  solipath.bat  solipath.json
.github/workflows/: aarch64linuxcompile.yml  compile.yml  m1maccompile.yml
