[tool.poetry]
name = "conanProject"
version = "0.1.0"
description = ""
authors = ["Brian Frazho <befrazho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
conan = "^2.0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
